<resources>
    <string name="app_name">Labirint</string>
    <string name="new_game">Новая игра</string>
    <string name="begin">продолжить</string>
    <string name="menu">меню</string>
    <string name="top">вверх</string>
    <string name="left">влево</string>
    <string name="down">вниз</string>
    <string name="right">вправо</string>
    <string name="restart">заново</string>
    <string name="no">нет</string>
    <string name="yes">да</string>
    <string name="dial_text">Начать новую игру?</string>
    <string name="exit">выход</string>
    <string name="dial_text_exit">Выйти из игры?</string>
    <string name="kol_game">Количество игр: </string>
    <string name="kol_win">Количество побед: </string>
    <string name="sred_time">Среднее время: </string>
    <string name="min_time">Минимальное время: </string>
    <string name="surr">сдаться</string>
    <string name="sur">Вы сдаётесь?</string>
    <string name="ok">ok</string>
    <string name="run_time">Время вышло</string>
    <string name="surr2">Вы не можете сдаться</string>
</resources>
