<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@mipmap/ic_launcher_game2">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"></android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/control"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/top"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/left"
            android:layout_toEndOf="@+id/left"
            android:text="@string/top"
            android:textSize="8sp"
            app:srcCompat="?android:attr/homeAsUpIndicator" />

        <ImageButton
            android:id="@+id/left"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_toStartOf="@+id/down"
            android:text="@string/left"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="?android:attr/homeAsUpIndicator" />

        <ImageButton
            android:id="@+id/down"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/right"
            android:text="@string/down"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="?android:attr/homeAsUpIndicator" />

        <ImageButton
            android:id="@+id/right"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="50dp"
            android:text="@string/right"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="?android:attr/homeAsUpIndicator" />

        <Button
            android:id="@+id/menu"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/menu"
            android:textSize="10sp" />

        <Button
            android:id="@+id/restart"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/menu"
            android:text="@string/restart"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="120dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/surrender"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="37dp"
            android:layout_marginTop="45dp"
            android:text="@string/surr"
            android:textSize="10sp" />
    </RelativeLayout>
</RelativeLayout>